Apparently bad behavior when using the Mix node with Glass Shaders #34740

Closed
opened 2013-03-23 06:51:12 +01:00 by tuqueque tuquequin · 3 comments

%%%--- Operating System, Graphics card ---

O.S.: Windows 7, 64-bit (SP1)
Processor: Intel Q9550, memory: 8GB DDR3
Graphic Card: Nvidia Geforce 550 Ti
Nvidia graphics driver version: 314.14

- Blender version with error, and version that worked ---

blender-2.66-r55527-win64 (downloaded from builder.blender.org)

- Short description of error ---

When you create a basic "dispersion" node setup in Cycles (shown in the included files) and mix that with another glass shader through a Mix node... A weird colored result appears when you set the factor in the Mix node different from 0.0 or 1.0 (e.g., 0.5)... Sometimes is reddish, somentimes is greenish or blueish; deppending on the IORs you use in each Glass Shader to create the dispersion effect.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Create a node setup like the one in the attached .blend file and/or screenshots/renders... And you should be able to reproduce it.%%%

%%%--- Operating System, Graphics card --- O.S.: Windows 7, 64-bit (SP1) Processor: Intel Q9550, memory: 8GB DDR3 Graphic Card: Nvidia Geforce 550 Ti Nvidia graphics driver version: 314.14 - Blender version with error, and version that worked --- blender-2.66-r55527-win64 (downloaded from builder.blender.org) - Short description of error --- When you create a basic "dispersion" node setup in Cycles (shown in the included files) and mix that with another glass shader through a Mix node... A weird colored result appears when you set the factor in the Mix node different from 0.0 or 1.0 (e.g., 0.5)... Sometimes is reddish, somentimes is greenish or blueish; deppending on the IORs you use in each Glass Shader to create the dispersion effect. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Create a node setup like the one in the attached .blend file and/or screenshots/renders... And you should be able to reproduce it.%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34740
No description provided.