Fix #34740: cycles rendering issue mixing glossy/glass BSDF's with zero or very low roughness and same index of refraction.

Problem was bad float precision due to low roughness, which caused the pdf for
the different closures to not match properly.